--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -90,7 +90,7 @@
     <!-- Marquee Text -->
     <div class="marquee-container shadow-sm">
         <div class="marquee-text">
-            🌟 Yashu E-Mitra par aapka swagat hai! Yahan sabhi prakar ke online form, emitra services, aadhar print, pan card, mool niwas, jati pramaan patra, aur bill bhugtan ki suvidha uplabdh hai. Sampark karein: 9571792847 🌟
+            🌟 यशु ई-मित्र पर आपका स्वागत है! यहां सभी प्रकार के ऑनलाइन फॉर्म, ईमित्र सेवाएं, आधार प्रिंट, पैन कार्ड, मूल निवास, जाति प्रमाण पत्र, और बिल भुगतान की सुविधा उपलब्ध है। संपर्क करें: 9571792847
         </div>
     </div>
 
@@ -105,7 +105,8 @@
         </div>
         <div class="max-w-7xl mx-auto px-6 relative z-10 text-center">
             <h2 class="text-4xl md:text-5xl font-bold mb-6">Sabhi Sarkari Yojnayein Aur Services Ek Hi Jagah</h2>
-            <p class="text-xl mb-8 max-w-2xl mx-auto text-blue-200">Ghar baithe ya center par aakar hamari e-mitra services ka labh uthayein. Tez, surakshit aur vishwasniya seva.</p>
+            <p class="text-xl mb-8 max-w-2xl mx-auto text-blue-200">घर बैठे या सेंटर पर आकर हमारी ई-मित्र सेवाओं का लाभ उठाएं। तेज़, सुरक्षित और विश्वसेवा।
+</p>
             <a href="#services" class="bg-emitraOrange hover:bg-orange-600 text-white px-8 py-3 rounded-full font-bold text-lg shadow-lg transition">Hamari Services Dekhein</a>
         </div>
     </section>
@@ -377,4 +378,5 @@
         });
     </script>
 </body>
+
 </html>
