Changed English to Hindi index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="max-w-7xl mx-auto px-6 relative z-10 text-center">
             <h2 class="text-4xl md:text-5xl font-bold mb-6">Sabhi Sarkari Yojnayein Aur Services Ek Hi Jagah</h2>
-            <p class="text-xl mb-8 max-w-2xl mx-auto text-blue-200">घर बैठे या सेंटर पर आकर हमारी ई-मित्र सेवाओं का लाभ उठाएं। तेज़, सुरक्षित और विश्वसेवा।
+            <p class="text-xl mb-8 max-w-2xl mx-auto text-blue-200">घर बैठे या सेंटर पर आकर हमारी ई-मित्र सेवाओं का लाभ उठाएं। तेज़, सुरक्षित और विश्वसनीय।
 </p>
             <a href="#services" class="bg-emitraOrange hover:bg-orange-600 text-white px-8 py-3 rounded-full font-bold text-lg shadow-lg transition">Hamari Services Dekhein</a>
         </div>
@@ -380,3 +380,4 @@
 </body>
 
 </html>
+
