--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- FontAwesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+<link rel="icon" type="image/png" href="https://www.pikpng.com/pngl/m/73-733414_emitra-rajasthan-e-mitra-logo-clipart.png">    
     <script>
         tailwind.config = {
             theme: {
@@ -380,4 +379,5 @@
 </body>
 
 </html>
+
 
